fix Dynmap link with https and #